k8s/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-api
spec:
  selector:
    app: feedback-api
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-api
  template:
    metadata:
      labels:
        app: feedback-api
    spec:
      containers:
        - name: api
          image: dockerforuser/feedback-api:latest
          ports:
            - containerPort: 5000
