k8s/frontend-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: feedback-frontend
spec:
  selector:
    app: feedback-frontend
  ports:
    - port: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: feedback-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feedback-frontend
  template:
    metadata:
      labels:
        app: feedback-frontend
    spec:
      containers:
        - name: frontend
          image: dockerforuser/feedback-frontend:latest
          ports:
            - containerPort: 80
